k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crdt-cad
  labels:
    app: crdt-cad
spec:
  type: ClusterIP
  selector:
    app: crdt-cad
  ports:
    - name: http
      port: 80
      targetPort: http
